--- a/client.ranger/src/components/styles/DataExplorationPage.css
+++ b/client.ranger/src/components/styles/DataExplorationPage.css
@@ -12,5 +12,8 @@ div.DataExplorationPage {
 .DataExplorationPage .buttons button {
   margin-left: 5px;
   margin-right: 5px;
+  max-width: 130px;
+  min-width: 130px;
   flex-grow: 1;
+  flex-shrink: 1;
 }
