Neural Plot back-end

--- a/client.ranger/src/components/styles/NeuralNetworkPage.css
+++ b/client.ranger/src/components/styles/NeuralNetworkPage.css
@@ -1,7 +1,7 @@
 
 .NeuralNetworkPanel {
   height: 500px;
-  width: 100%;
+  width: 500px;
   align-content: center;
   outline: 2px solid black;
   margin-top: 10px;
