Completed user flow for user choosing options for new session

--- a/client.ranger/src/components/styles/NewSession.css
+++ b/client.ranger/src/components/styles/NewSession.css
@@ -24,3 +24,13 @@ div.choice.left:hover {
 div.choice.right:hover {
   background-color: rgba(255,0,0,0.1);
 }
+
+div.layer-size {
+  margin-top:10px;
+  margin-bottom:10px;
+}
+
+button {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
