--- a/client.ranger/src/components/styles/App.css
+++ b/client.ranger/src/components/styles/App.css
@@ -32,3 +32,15 @@
   background-color: salmon;
   color: black;
 }
+
+.flexrow {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.flexcolumn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
